src/test/ui/issue-5239-1.stderr
error[E0368]: binary assignment operation `+=` cannot be applied to type `&isize`
  --> $DIR/issue-5239-1.rs:14:30
   |
LL |     let x = |ref x: isize| { x += 1; };
   |                              -^^^^^
   |                              |
   |                              cannot use `+=` on type `&isize`
   |
   = note: an implementation of `std::ops::AddAssign` might be missing for `&isize`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0368`.
